--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
 
     <section id="instagram">
         <h2>Latest Work</h2>
-        <div id="insta-feed"></div>
+        <div id="insta-feed">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/pennio__/" data-instgrm-version="14" style=" background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
+            </blockquote>
+        </div>
+        <script async src="//www.instagram.com/embed.js"></script>
     </section>
+
 
     <section id="contact">
         <h2>Book a Free Discovery Session</h2>
