--- a/index.html
+++ b/index.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PENNIO – Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PENNIO – Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <h1>PENNIO</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#instagram">Instagram</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <header>
-        <h1>PENNIO</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Welcome to my creative world. I specialize in branding, logo design, and visual storytelling.</p>
+  </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Welcome to my creative world. I specialize in branding, logo design, and visual storytelling.</p>
-    </section>
+  <section id="portfolio">
+    <h2>Portfolio</h2>
+    <!-- Button to trigger PDF modal -->
+    <button id="openPortfolio">View My PDF Portfolio</button>
+  </section>
 
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <p><a href="portfolio.pdf" target="_blank">View/Download My PDF Portfolio</a></p>
-        <embed src="portfolio.pdf" type="application/pdf" width="100%" height="500px">
-    </section>
+  <section id="instagram">
+    <h2>Latest Work</h2>
+    <div id="insta-feed">
+      <!-- Instagram embed block using official embed code -->
+      <blockquote class="instagram-media"
+                  data-instgrm-permalink="https://www.instagram.com/pennio__/"
+                  data-instgrm-version="14"
+                  style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+      </blockquote>
+      <script async src="//www.instagram.com/embed.js"></script>
+    </div>
+  </section>
 
-    <section id="instagram">
-        <h2>Latest Work</h2>
-        <div id="insta-feed">
-            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/pennio__/" data-instgrm-version="14" style=" background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-            </blockquote>
-        </div>
-        <script async src="//www.instagram.com/embed.js"></script>
-    </section>
+  <section id="contact">
+    <h2>Book a Free Discovery Session</h2>
+    <p>Email me: <a href="mailto:pauloyatowo@gmail.com">pauloyatowo@gmail.com</a></p>
+  </section>
 
+  <footer>
+    <p>© 2025 PENNIO – All rights reserved.</p>
+  </footer>
 
-    <section id="contact">
-        <h2>Book a Free Discovery Session</h2>
-        <p>Email me: <a href="mailto:pauloyatowo@gmail.com">pauloyatowo@gmail.com</a></p>
-    </section>
+  <!-- Modal for PDF Portfolio -->
+  <div id="portfolioModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <embed src="portfolio.pdf" type="application/pdf" width="100%" height="600px">
+    </div>
+  </div>
 
-    <footer>
-        <p>© 2025 PENNIO – All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
-
+  <script src="script.js"></script>
 </body>
 </html>
