--- a/index.html
+++ b/index.html
@@ -45,10 +45,19 @@
     </div>
   </section>
 
-  <section id="contact">
-    <h2>Book a Free Discovery Session</h2>
-    <p>Email me: <a href="mailto:pauloyatowo@gmail.com">pauloyatowo@gmail.com</a></p>
-  </section>
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email me: <a href="mailto:pauloyatowo@gmail.com">pauloyatowo@gmail.com</a></p>
+  <div class="social-links">
+    <a href="https://instagram.com/pennio__" target="_blank" rel="noopener noreferrer">
+      Instagram (@pennio__)
+    </a>
+    <a href="https://wa.me/2348101833138" target="_blank" rel="noopener noreferrer">
+      WhatsApp (+2348101833138)
+    </a>
+  </div>
+</section>
+
 
   <footer>
     <p>© 2025 PENNIO – All rights reserved.</p>
