--- a/index.html
+++ b/index.html
@@ -1,64 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PENNIO – Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<header>
-  <h1>PENNIO</h1>
-  <div class="hamburger" id="hamburger">&#9776;</div>
-  <nav id="nav-menu">
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#instagram">Instagram</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+  <!-- Header with Gradient & Hamburger -->
+  <header>
+    <h1>PENNIO</h1>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <nav id="nav-menu">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="#instagram">Instagram</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <!-- Floating Contact Icons -->
+  <div class="floating-icons">
+    <a href="https://instagram.com/pennio__" target="_blank" rel="noopener noreferrer">
+      IG
+    </a>
+    <a href="https://wa.me/2348101833138" target="_blank" rel="noopener noreferrer">
+      WA
+    </a>
+  </div>
 
-  <section id="about">
-    <h2>About Me</h2>
+  <!-- HERO / HOME Section -->
+  <section id="home" class="hero">
+    <h2>Creative Branding &amp; Visual Storytelling</h2>
     <p>Welcome to my creative world. I specialize in branding, logo design, and visual storytelling.</p>
+    <!-- Call-to-Action Button -->
+    <button class="cta" onclick="window.location.href='#contact'">
+      Book a Discovery Call
+    </button>
   </section>
 
+  <!-- PORTFOLIO Section -->
   <section id="portfolio">
     <h2>Portfolio</h2>
     <!-- Button to trigger PDF modal -->
     <button id="openPortfolio">View My PDF Portfolio</button>
   </section>
 
+  <!-- INSTAGRAM Section -->
   <section id="instagram">
     <h2>Latest Work</h2>
     <div id="insta-feed">
-      <!-- Instagram embed block using official embed code -->
-      <blockquote class="instagram-media"
-                  data-instgrm-permalink="https://www.instagram.com/pennio__/"
-                  data-instgrm-version="14"
-                  style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
+      <blockquote
+        class="instagram-media"
+        data-instgrm-permalink="https://www.instagram.com/pennio__/"
+        data-instgrm-version="14"
+        style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
       </blockquote>
       <script async src="//www.instagram.com/embed.js"></script>
     </div>
   </section>
 
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email me: <a href="mailto:pauloyatowo@gmail.com">pauloyatowo@gmail.com</a></p>
-  <div class="social-links">
-    <a href="https://instagram.com/pennio__" target="_blank" rel="noopener noreferrer">
-      Instagram (@pennio__)
-    </a>
-    <a href="https://wa.me/2348101833138" target="_blank" rel="noopener noreferrer">
-      WhatsApp (+2348101833138)
-    </a>
-  </div>
-</section>
+  <!-- CONTACT Section -->
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email me: <a href="mailto:pauloyatowo@gmail.com">pauloyatowo@gmail.com</a></p>
+  </section>
 
-
+  <!-- Footer -->
   <footer>
     <p>© 2025 PENNIO – All rights reserved.</p>
   </footer>
@@ -67,7 +77,7 @@
   <div id="portfolioModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <embed src="portfolio.pdf" type="application/pdf" width="100%" height="600px">
+      <embed src="portfolio.pdf" type="application/pdf" width="100%" height="600px" />
     </div>
   </div>
 
