--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PENNIO – Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  
 </head>
 <body>
   <!-- Header with Gradient & Hamburger -->
@@ -24,10 +26,10 @@
   <!-- Floating Contact Icons -->
   <div class="floating-icons">
     <a href="https://instagram.com/pennio__" target="_blank" rel="noopener noreferrer">
-      IG
+      <i class="fa-brands fa-instagram"></i>
     </a>
     <a href="https://wa.me/2348101833138" target="_blank" rel="noopener noreferrer">
-      WA
+      <i class="fa-brands fa-whatsapp"></i>
     </a>
   </div>
 
