--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- CONTACT Section -->
   <section id="contact">
     <h2>Contact</h2>
-    <form action="https://formsubmit.co/pauloyatowo@gmail.com" method="POST">
+    <form action="https://formsubmit.co/ea0da421e8e6e82457be40792262eeed" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
