--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
   <title>PENNIO – Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  
 </head>
 <body>
-  <!-- Header with Gradient & Hamburger -->
-  <header>
-    <h1>PENNIO</h1>
-    <nav id="nav-menu">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#instagram">Instagram</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-    <button id="menu-toggle">
-    <i class="fa-solid fa-bars"></i>
-    </button>
-  </header>
+<header>
+    <div class="container">
+        <a href="#" class="logo">PENNIO</a>
+        <nav class="nav-links">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#instagram">Instagram</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <a href="#contact" class="cta-btn">Get in Touch</a>
+
+        <!-- Mobile Menu Toggle -->
+        <button id="menu-toggle">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+    </div>
+</header>
 
   <!-- Floating Contact Icons -->
   <div class="floating-icons">
