--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <!-- INSTAGRAM Section -->
   <section id="instagram">
     <h2>Latest Work</h2>
-    <div id="insta-feed">
+    <div id="insta-feed" class="instagram-container">
       <blockquote
         class="instagram-media"
         data-instgrm-permalink="https://www.instagram.com/pennio__/"
