--- a/index.html
+++ b/index.html
@@ -72,39 +72,30 @@
 <!-- CONTACT Section -->
 <section id="contact">
     <h2>Contact</h2>
-    <div id="contact-form">
-        <form id="contactForm" action="https://formsubmit.co/ea0da421e8e6e82457be40792262eeed" method="POST">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
+    <form id="contactForm" action="https://formsubmit.co/ea0da421e8e6e82457be40792262eeed" method="POST" target="hidden_iframe">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+</form>
 
-    <div id="thank-you-message" style="display: none;">
-        <h3>Thank You!</h3>
-        <p>Your message has been sent successfully. I will get back to you soon.</p>
-        <a href="#contact" id="refreshForm">Send another message</a>
-    </div>
-</section>
+<iframe name="hidden_iframe" style="display: none;"></iframe>
+
+<div id="thank-you-message" style="display: none;">
+    <h3>Thank You!</h3>
+    <p>Your message has been sent successfully. I will get back to you soon.</p>
+    <a href="#contact" id="refreshForm">Send another message</a>
+</div>
 
 <script>
-    document.getElementById("contactForm").addEventListener("submit", function(event) {
-        event.preventDefault();
-        const form = this;
-
-        fetch(form.action, {
-            method: "POST",
-            body: new FormData(form)
-        }).then(() => {
-            document.getElementById("contact-form").style.display = "none";
-            document.getElementById("thank-you-message").style.display = "block";
-        }).catch(error => console.error("Error:", error));
+    document.getElementById("contactForm").addEventListener("submit", function () {
+        document.getElementById("contactForm").style.display = "none";
+        document.getElementById("thank-you-message").style.display = "block";
     });
 
-    document.getElementById("refreshForm").addEventListener("click", function(event) {
+    document.getElementById("refreshForm").addEventListener("click", function (event) {
         event.preventDefault();
-        document.getElementById("contact-form").style.display = "block";
+        document.getElementById("contactForm").style.display = "block";
         document.getElementById("thank-you-message").style.display = "none";
         document.getElementById("contactForm").reset();
     });
