--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <p>Your message has been sent successfully. I will get back to you soon.</p>
     <a href="#contact" id="refreshForm">Send another message</a>
 </div>
-
+</section>
 <script>
     document.getElementById("contactForm").addEventListener("submit", function () {
         document.getElementById("contactForm").style.display = "none";
