--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <header>
     <div class="container">
         <a href="#" class="logo">PENNIO</a>
-        <nav class="nav-links">
+        <nav class="nav-links" id="nav-menu">
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#instagram">Instagram</a></li>
                 <li><a href="#contact">Contact</a></li>
