--- a/bylt/index.html
+++ b/bylt/index.html
@@ -11,10 +11,9 @@
     <meta name="theme-color" content="#3F51B5" />
     <title>BYLT — Build Your Loyal Tribe</title>
 
-    <!-- Favicon -->
     <link rel="icon" href="favicon.ico" />
 
-    <!-- Tailwind (CDN) -->
+    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
     <!-- Font -->
@@ -24,7 +23,6 @@
     <script src="https://unpkg.com/lucide@latest" defer></script>
 
     <script>
-      // Tailwind config inline for GH Pages simplicity
       tailwind.config = {
         theme: {
           extend: {
@@ -77,38 +75,31 @@
     <section id="services" class="max-w-7xl mx-auto px-4 py-20">
       <h3 class="text-3xl md:text-4xl font-extrabold text-center mb-12">The Six Pillars of <span class="text-root-indigo">Strategic Tribe BYLDing</span></h3>
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        <!-- Card Template Example -->
         <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo hover:shadow-xl transition">
           <i data-lucide="anchor" class="w-10 h-10 text-root-indigo mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-root-indigo">Root</span></h4>
           <p class="text-bylt-graphite text-sm">Define your foundation—values, mission, and vision. Your <b>Buying Tribe</b> starts with <b>BYLT</b>.</p>
         </div>
-
-        <!-- Repeat others in the same minimal structure -->
         <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green hover:shadow-xl transition">
           <i data-lucide="compass" class="w-10 h-10 text-map-green mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-map-green">Map</span></h4>
           <p class="text-bylt-graphite text-sm">Strategically map your tribe’s growth and conversion journey.</p>
         </div>
-
         <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua hover:shadow-xl transition">
           <i data-lucide="megaphone" class="w-10 h-10 text-voice-aqua mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-voice-aqua">Voice</span></h4>
           <p class="text-bylt-graphite text-sm">Unify your tone and message to attract and retain your tribe.</p>
         </div>
-
         <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray hover:shadow-xl transition">
           <i data-lucide="layout-grid" class="w-10 h-10 text-frame-gray mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-frame-gray">Frame</span></h4>
           <p class="text-bylt-graphite text-sm">Craft a visual identity that expresses your tribe’s essence.</p>
         </div>
-
         <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange hover:shadow-xl transition">
           <i data-lucide="send" class="w-10 h-10 text-echo-orange mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-echo-orange">Echo</span></h4>
           <p class="text-bylt-graphite text-sm">Deploy campaigns that amplify your tribe’s voice.</p>
         </div>
-
         <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe hover:shadow-xl transition">
           <i data-lucide="shield" class="w-10 h-10 text-focus-taupe mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-focus-taupe">Focus</span></h4>
@@ -127,8 +118,21 @@
     <!-- Contact -->
     <section id="contact" class="bg-white py-20 text-center">
       <h3 class="text-3xl font-extrabold text-bylt-black mb-4">Get Started Today</h3>
-      <p class="text-bylt-graphite mb-8">Email us to start <b>BYLDing</b> your tribe.</p>
-      <a href="mailto:info@bylt.com" class="text-root-indigo text-lg hover:underline">info@bylt.com</a>
+      <p class="text-bylt-graphite mb-8 max-w-2xl mx-auto">
+        Fill out the form below to start <b>BYLDing</b> your loyal tribe with us.
+      </p>
+      <div class="max-w-3xl mx-auto">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLScZgSSKQ30trTF8MdTkIK0m9pX1DWdMKPAgJ889LEMAeGElgQ/viewform?embedded=true"
+          width="100%"
+          height="900"
+          frameborder="0"
+          marginheight="0"
+          marginwidth="0"
+          class="rounded-2xl shadow-lg">
+          Loading…
+        </iframe>
+      </div>
     </section>
 
     <!-- Footer -->
