--- a/bylt/index.html
+++ b/bylt/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="BYLT — Build Your Loyal Tribe. Empower your brand to BYLD (Build Your Loyal Tribe) through a 6-pillar strategy for loyal community growth." />
+    <meta name="description" content="BYLT BY PENNIO — Build Your Loyal Tribe. Empower your brand to BYLD (Build Your Loyal Tribe) through a 6-pillar strategy for loyal community growth." />
     <meta property="og:title" content="BYLT — Build Your Loyal Tribe" />
     <meta property="og:description" content="The ecosystem that helps you BYLD a dedicated community around your brand." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://pennio-design.github.io/bylt/og-image.jpg" />
     <meta name="theme-color" content="#3F51B5" />
-    <title>BYLT — Build Your Loyal Tribe</title>
+    <title>BYLT BY PENNIO — Build Your Loyal Tribe</title>
 
     <link rel="icon" href="favicon.ico" />
 
@@ -137,7 +137,7 @@
 
     <!-- Footer -->
     <footer class="bg-bylt-black text-center text-white py-6 text-sm">
-      <p>&copy; 2025 <b>BYLT</b> — Build Your Loyal Tribe. <br />Part of <b>pennio-design.github.io</b>.</p>
+      <p>&copy; 2025 <b>BYLT</b> — Build Your Loyal Tribe. <br />Part of <b><a href="pennio-design.github.io">pennio-design.github.io</a></b>.</p>
     </footer>
 
     <script>
