--- a/bylt/index.html
+++ b/bylt/index.html
@@ -57,7 +57,7 @@
     <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
       <nav class="max-w-7xl mx-auto flex justify-between items-center p-4">
-        <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-bylt-black">BYLT</h1>
+        <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-bylt-black">BYLT BY PENNIO</h1>
         <a href="#bylt4u" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Explore BYLT4U</a>
       </nav>
     </header>
