--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PENNIO – Portfolio</title>
+  <title>PENNIO.DESIGN – Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -34,7 +34,7 @@
 
   <!-- Floating Contact Icons -->
   <div class="floating-icons">
-    <a href="https://instagram.com/pennio__" target="_blank" rel="noopener noreferrer">
+    <a href="https://instagram.com/pennio.design" target="_blank" rel="noopener noreferrer">
       <i class="fa-brands fa-instagram"></i>
     </a>
     <a href="https://wa.me/2348101833138" target="_blank" rel="noopener noreferrer">
@@ -65,7 +65,7 @@
     <div id="insta-feed" class="instagram-container">
       <blockquote
         class="instagram-media"
-        data-instgrm-permalink="https://www.instagram.com/pennio__/"
+        data-instgrm-permalink="https://www.instagram.com/pennio.design/"
         data-instgrm-version="14"
         style="background:#FFF; border:0; margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%;">
       </blockquote>
