--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <div class="container">
-        <a href="#" class="logo">PENNIO</a>
+        <a href="#" class="logo">PENNIO.DESIGN</a>
         <nav class="nav-links" id="nav-menu">
             <ul>
                 <li><a href="#">Home</a></li>
