--- a/penorita/index.html
+++ b/penorita/index.html
@@ -45,7 +45,7 @@
     <div id="root"></div>
     
     <!-- Main application script -->
-    <script type="text/babel" data-type="module" src="./index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
 <script type="module" src="/index.tsx"></script>
 </body>
 </html>
