--- a/bylt/index.html
+++ b/bylt/index.html
@@ -3,23 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="BYLT BY PENNIO — Build Your Loyal Tribe. Empower your brand to BYLD (Build Your Loyal Tribe) through a 6-pillar strategy for loyal community growth." />
-    <meta property="og:title" content="BYLT — Build Your Loyal Tribe" />
-    <meta property="og:description" content="The ecosystem that helps you BYLD a dedicated community around your brand." />
+    <meta name="description" content="BYLT BY PENNIO — We build the systems that help your brand grow with clarity and ease." />
+    <meta property="og:title" content="BYLT by PENNIO — Build Your Loyal Tribe" />
+    <meta property="og:description" content="A done-for-you brand system designed to make your business simple, clear, and ready to grow." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://pennio-design.github.io/bylt/og-image.jpg" />
     <meta name="theme-color" content="#3F51B5" />
-    <title>BYLT BY PENNIO — Build Your Loyal Tribe</title>
+    <title>BYLT by PENNIO — Build Your Loyal Tribe</title>
 
     <link rel="icon" href="favicon.ico" />
-
-    <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-
-    <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet" />
-
-    <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest" defer></script>
 
     <script>
@@ -58,68 +52,85 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
       <nav class="max-w-7xl mx-auto flex justify-between items-center p-4">
         <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-bylt-black">BYLT BY PENNIO</h1>
-        <a href="#bylt4u" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Explore BYLT4U</a>
+        <a href="#bylt4u" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Get BYLT4U</a>
       </nav>
     </header>
 
     <!-- Hero -->
     <section class="hero-bg text-center py-24">
       <div class="max-w-3xl mx-auto px-4">
-        <h2 class="text-5xl md:text-6xl font-extrabold mb-6">Your <span class="text-root-indigo">Loyal Tribe</span><br><span class="text-bylt-black">Truly BYLT.</span></h2>
-        <p class="text-lg md:text-xl text-bylt-graphite mb-8">Empowering you to <b>BYLD</b> (<b>Build Your Loyal Tribe</b>)—a dedicated community whose identity is tied to your brand.</p>
-        <a href="#services" class="inline-block bg-root-indigo text-white font-bold px-8 py-3 rounded-xl shadow-lg hover:bg-indigo-600 transition">Explore the BYLT Ecosystem</a>
+        <h2 class="text-5xl md:text-6xl font-extrabold mb-6 leading-tight">
+          Build a Brand That Works.<br />
+          <span class="text-root-indigo">Grow with Clarity.</span>
+        </h2>
+        <p class="text-lg md:text-xl text-bylt-graphite mb-8">
+          Your brand doesn’t just need a logo — it needs a system.  
+          <b>BYLT by PENNIO</b> builds the structure that makes your brand easy to run and ready to grow.
+        </p>
+        <a href="#services" class="inline-block bg-root-indigo text-white font-bold px-8 py-3 rounded-xl shadow-lg hover:bg-indigo-600 transition">
+          See How It Works
+        </a>
       </div>
     </section>
 
     <!-- Services -->
     <section id="services" class="max-w-7xl mx-auto px-4 py-20">
-      <h3 class="text-3xl md:text-4xl font-extrabold text-center mb-12">The Six Pillars of <span class="text-root-indigo">Strategic Tribe BYLDing</span></h3>
+      <h3 class="text-3xl md:text-4xl font-extrabold text-center mb-12">Our Six BYLT Pillars</h3>
+      <p class="text-center text-bylt-graphite max-w-2xl mx-auto mb-16">
+        Each pillar is a step towards a brand that’s clear, consistent, and built to grow.
+      </p>
+
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo hover:shadow-xl transition">
+        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo">
           <i data-lucide="anchor" class="w-10 h-10 text-root-indigo mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-root-indigo">Root</span></h4>
-          <p class="text-bylt-graphite text-sm">Define your foundation—values, mission, and vision. Your <b>Buying Tribe</b> starts with <b>BYLT</b>.</p>
+          <p class="text-bylt-graphite text-sm">Define your foundation — your values, mission, and what you stand for.</p>
         </div>
-        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green hover:shadow-xl transition">
+        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green">
           <i data-lucide="compass" class="w-10 h-10 text-map-green mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-map-green">Map</span></h4>
-          <p class="text-bylt-graphite text-sm">Strategically map your tribe’s growth and conversion journey.</p>
+          <p class="text-bylt-graphite text-sm">Plan your growth path — how to reach and keep your ideal audience.</p>
         </div>
-        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua hover:shadow-xl transition">
+        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua">
           <i data-lucide="megaphone" class="w-10 h-10 text-voice-aqua mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-voice-aqua">Voice</span></h4>
-          <p class="text-bylt-graphite text-sm">Unify your tone and message to attract and retain your tribe.</p>
+          <p class="text-bylt-graphite text-sm">Craft your message so people understand and connect instantly.</p>
         </div>
-        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray hover:shadow-xl transition">
+        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray">
           <i data-lucide="layout-grid" class="w-10 h-10 text-frame-gray mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-frame-gray">Frame</span></h4>
-          <p class="text-bylt-graphite text-sm">Craft a visual identity that expresses your tribe’s essence.</p>
+          <p class="text-bylt-graphite text-sm">Design a look that reflects your identity and builds trust.</p>
         </div>
-        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange hover:shadow-xl transition">
+        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange">
           <i data-lucide="send" class="w-10 h-10 text-echo-orange mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-echo-orange">Echo</span></h4>
-          <p class="text-bylt-graphite text-sm">Deploy campaigns that amplify your tribe’s voice.</p>
+          <p class="text-bylt-graphite text-sm">Share your story with the world through smart campaigns.</p>
         </div>
-        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe hover:shadow-xl transition">
+        <div class="reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe">
           <i data-lucide="shield" class="w-10 h-10 text-focus-taupe mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-focus-taupe">Focus</span></h4>
-          <p class="text-bylt-graphite text-sm">Keep operations aligned so your energy stays on BYLDing.</p>
+          <p class="text-bylt-graphite text-sm">Keep your operations organised so your brand stays consistent.</p>
         </div>
       </div>
     </section>
 
     <!-- BYLT4U -->
     <section id="bylt4u" class="text-white py-20 px-4 bg-gradient-to-br from-gray-900 to-black text-center">
-      <h3 class="text-4xl font-extrabold mb-4">BYLT4U — <span class="text-root-indigo">Built For You.</span></h3>
-      <p class="max-w-2xl mx-auto text-lg text-white/80 mb-8">Our done-for-you service manages every pillar of the BYLT ecosystem so your brand grows without friction.</p>
-      <a href="#contact" class="bg-white text-root-indigo font-bold px-10 py-3 rounded-xl shadow-lg hover:bg-gray-100 transition">Go BYLT4U</a>
+      <h3 class="text-4xl font-extrabold mb-4">🚀 BYLT4U — Built For You</h3>
+      <p class="max-w-2xl mx-auto text-lg text-white/80 mb-8">
+        Don’t want to do it all yourself?  
+        <b>BYLT4U</b> is our done-for-you service — we build the full brand system for you, from foundation to launch.
+      </p>
+      <a href="#contact" class="bg-white text-root-indigo font-bold px-10 py-3 rounded-xl shadow-lg hover:bg-gray-100 transition">
+        Start With BYLT4U
+      </a>
     </section>
 
     <!-- Contact -->
     <section id="contact" class="bg-white py-20 text-center">
-      <h3 class="text-3xl font-extrabold text-bylt-black mb-4">Get Started Today</h3>
+      <h3 class="text-3xl font-extrabold text-bylt-black mb-4">Get Started</h3>
       <p class="text-bylt-graphite mb-8 max-w-2xl mx-auto">
-        Fill out the form below to start <b>BYLDing</b> your loyal tribe with us.
+        Fill the form below — let’s help you build the system that makes your brand easier to run and ready to grow.
       </p>
       <div class="max-w-3xl mx-auto">
         <iframe
@@ -137,7 +148,7 @@
 
     <!-- Footer -->
     <footer class="bg-bylt-black text-center text-white py-6 text-sm">
-      <p>&copy; 2025 <b>BYLT</b> — Build Your Loyal Tribe. <br />Part of <b><a href="pennio-design.github.io">pennio-design.github.io</a></b>.</p>
+      <p>&copy; 2025 <b>BYLT by PENNIO</b> — We build the system that helps your brand work. <br />Part of <b><a href="https://pennio-design.github.io" class="underline">pennio-design.github.io</a></b>.</p>
     </footer>
 
     <script>
