--- a/bylt/index.html
+++ b/bylt/index.html
@@ -3,13 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="BYLT BY PENNIO — Build a brand system that grows with clarity and ease." />
+    <meta name="description" content="BYLT BY PENNIO — Build Your Loyal Tribe. Empower your brand to BYLD (Build Your Loyal Tribe) through simple systems for clarity and growth." />
+    <meta property="og:title" content="BYLT — Build Your Loyal Tribe" />
+    <meta property="og:description" content="The ecosystem that helps you BYLD a dedicated community around your brand." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://pennio-design.github.io/bylt/og-image.jpg" />
     <meta name="theme-color" content="#3F51B5" />
-    <title>BYLT by PENNIO — Build Your Loyal Tribe</title>
+    <title>BYLT BY PENNIO — Build Your Loyal Tribe</title>
 
     <link rel="icon" href="favicon.ico" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
+
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+
+    <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet" />
+
+    <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest" defer></script>
 
     <script>
@@ -35,9 +45,11 @@
     <style>
       html, body { scroll-behavior: smooth; }
       body { background-color: #F5F6F8; color: #1A1A1A; font-family: 'Inter', sans-serif; }
-      .reveal { opacity: 0; transform: translateY(20px); transition: opacity .6s, transform .6s; }
-      .visible { opacity: 1; transform: translateY(0); }
-      .hidden-popup { display: none; }
+      .hero-bg { background: linear-gradient(-45deg,#e0e7ff,#c3dafe,#a7c0fe,#8aaffa); background-size:400% 400%; animation:bgmove 15s ease infinite; }
+      @keyframes bgmove { 0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%} }
+      .reveal { opacity:0; transform:translateY(20px); transition:opacity .6s,transform .6s; }
+      .visible { opacity:1; transform:translateY(0); }
+      #thankYouPopup { display:none; }
     </style>
   </head>
 
@@ -47,69 +59,64 @@
     <header class="bg-white shadow-sm sticky top-0 z-50">
       <nav class="max-w-7xl mx-auto flex justify-between items-center p-4">
         <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-bylt-black">BYLT BY PENNIO</h1>
-        <a href="#leadform" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Get Started</a>
+        <a href="#leadform" class="bg-root-indigo hover:bg-bylt-black text-white font-semibold px-4 py-2 rounded-lg transition">Start Now</a>
       </nav>
     </header>
 
     <!-- Hero -->
-    <section class="text-center py-24 bg-gradient-to-br from-indigo-50 to-white">
+    <section class="hero-bg text-center py-24">
       <div class="max-w-3xl mx-auto px-4">
         <h2 class="text-5xl md:text-6xl font-extrabold mb-6 leading-tight">
-          Build a Brand That Works.<br />
-          <span class="text-root-indigo">Grow with Clarity.</span>
+          Build a Brand That Works — Not One That Wastes Time
         </h2>
         <p class="text-lg md:text-xl text-bylt-graphite mb-8">
-          Your brand doesn’t just need a logo — it needs a system.  
-          <b>BYLT by PENNIO</b> helps you build that system with structure, strategy, and simplicity.
+          BYLT helps you create a simple, strong brand system that saves time, grows your community, and builds loyalty.
         </p>
         <a href="#services" class="inline-block bg-root-indigo text-white font-bold px-8 py-3 rounded-xl shadow-lg hover:bg-indigo-600 transition">
-          See How It Works
+          See What You’ll Get
         </a>
       </div>
     </section>
 
     <!-- Services -->
     <section id="services" class="max-w-7xl mx-auto px-4 py-20">
-      <h3 class="text-3xl md:text-4xl font-extrabold text-center mb-12">Our Six BYLT Pillars</h3>
-      <p class="text-center text-bylt-graphite max-w-2xl mx-auto mb-16">
-        Each service helps you build a clearer, stronger brand.
-      </p>
-
+      <h3 class="text-3xl md:text-4xl font-extrabold text-center mb-12">The Six Pillars of <span class="text-root-indigo">BYLT</span></h3>
       <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-        <div data-service="BYLT.Root" class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo cursor-pointer hover:shadow-xl transition">
+
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-root-indigo hover:shadow-xl transition cursor-pointer" data-service="BYLT.Root — Discovery & Foundation">
           <i data-lucide="anchor" class="w-10 h-10 text-root-indigo mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-root-indigo">Root</span></h4>
-          <p class="text-bylt-graphite text-sm">Define your foundation — your values, mission, and direction.</p>
+          <p class="text-bylt-graphite text-sm">Define what your brand truly stands for — your values, mission, and voice.</p>
         </div>
 
-        <div data-service="BYLT.Map" class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green cursor-pointer hover:shadow-xl transition">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-map-green hover:shadow-xl transition cursor-pointer" data-service="BYLT.Map — Strategy & Growth">
           <i data-lucide="compass" class="w-10 h-10 text-map-green mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-map-green">Map</span></h4>
-          <p class="text-bylt-graphite text-sm">Plan your growth journey and position your brand for success.</p>
+          <p class="text-bylt-graphite text-sm">Create a clear plan to grow your audience and community sustainably.</p>
         </div>
 
-        <div data-service="BYLT.Voice" class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua cursor-pointer hover:shadow-xl transition">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-voice-aqua hover:shadow-xl transition cursor-pointer" data-service="BYLT.Voice — Messaging & Storytelling">
           <i data-lucide="megaphone" class="w-10 h-10 text-voice-aqua mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-voice-aqua">Voice</span></h4>
-          <p class="text-bylt-graphite text-sm">Find your brand’s voice and communicate clearly to your audience.</p>
+          <p class="text-bylt-graphite text-sm">Shape your brand message so people listen, connect, and remember you.</p>
         </div>
 
-        <div data-service="BYLT.Frame" class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray cursor-pointer hover:shadow-xl transition">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-frame-gray hover:shadow-xl transition cursor-pointer" data-service="BYLT.Frame — Design & Visual Identity">
           <i data-lucide="layout-grid" class="w-10 h-10 text-frame-gray mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-frame-gray">Frame</span></h4>
-          <p class="text-bylt-graphite text-sm">Design a visual identity that reflects your story and values.</p>
+          <p class="text-bylt-graphite text-sm">Design your look — logo, colours, and brand visuals that stand out.</p>
         </div>
 
-        <div data-service="BYLT.Echo" class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange cursor-pointer hover:shadow-xl transition">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-echo-orange hover:shadow-xl transition cursor-pointer" data-service="BYLT.Echo — Marketing & Launch">
           <i data-lucide="send" class="w-10 h-10 text-echo-orange mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-echo-orange">Echo</span></h4>
-          <p class="text-bylt-graphite text-sm">Launch campaigns that grow your tribe and amplify your reach.</p>
+          <p class="text-bylt-graphite text-sm">Plan your campaigns, content, and launch strategies for impact.</p>
         </div>
 
-        <div data-service="BYLT.Focus" class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe cursor-pointer hover:shadow-xl transition">
+        <div class="service-card reveal bg-white p-8 rounded-2xl shadow-md border-t-4 border-focus-taupe hover:shadow-xl transition cursor-pointer" data-service="BYLT.Focus — Systems & Operations">
           <i data-lucide="shield" class="w-10 h-10 text-focus-taupe mb-4"></i>
           <h4 class="text-2xl font-semibold mb-2">BYLT.<span class="text-focus-taupe">Focus</span></h4>
-          <p class="text-bylt-graphite text-sm">Set up systems that keep your brand organised and consistent.</p>
+          <p class="text-bylt-graphite text-sm">Simplify your operations so your brand runs smoothly every day.</p>
         </div>
       </div>
     </section>
@@ -125,6 +132,7 @@
         <form id="byltForm" action="https://formsubmit.co/91dd305c9a1f9afd33dc0ca5b60f1311" method="POST" class="bg-gray-50 p-8 rounded-2xl shadow-lg space-y-4">
           <input type="hidden" name="_subject" value="New BYLT Lead" />
           <input type="hidden" name="_template" value="box" />
+          <input type="hidden" name="_captcha" value="false" />
           <input type="hidden" name="Service" id="selectedService" value="General Inquiry" />
 
           <div>
@@ -139,7 +147,7 @@
 
           <div>
             <label class="block text-left font-semibold mb-1">Brand or Business Name</label>
-            <input type="text" name="Brand" class="w-full border-gray-300 rounded-md p-3" placeholder="e.g. PENNIO" />
+            <input type="text" name="Brand" class="w-full border-gray-300 rounded-md p-3" placeholder="e.g. Brillá.ng" />
           </div>
 
           <div>
@@ -155,7 +163,7 @@
     </section>
 
     <!-- Thank You Popup -->
-    <div id="thankYouPopup" class="hidden-popup fixed inset-0 bg-black/70 flex items-center justify-center z-50">
+    <div id="thankYouPopup" class="fixed inset-0 bg-black/70 flex items-center justify-center z-50 hidden">
       <div class="bg-white p-8 rounded-2xl shadow-2xl max-w-md text-center">
         <h4 class="text-2xl font-bold text-root-indigo mb-2">Thank You!</h4>
         <p class="text-bylt-graphite mb-6">Your message has been received. We’ll get back to you shortly.</p>
@@ -165,21 +173,25 @@
 
     <!-- Footer -->
     <footer class="bg-bylt-black text-center text-white py-6 text-sm">
-      <p>&copy; 2025 <b>BYLT by PENNIO</b> — We build systems that make your brand work. <br />
-      <a href="https://pennio-design.github.io" class="underline">pennio-design.github.io</a></p>
+      <p>&copy; 2025 <b>BYLT</b> — Build Your Loyal Tribe.<br />Part of <b><a href="https://pennio-design.github.io" target="_blank">pennio-design.github.io</a></b>.</p>
     </footer>
 
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         lucide?.createIcons();
 
-        // Animate cards
-        const observer = new IntersectionObserver(entries =>
-          entries.forEach(e => { if(e.isIntersecting){ e.target.classList.add('visible'); observer.unobserve(e.target); } })
-        , { threshold: 0.15 });
+        // Scroll reveal
+        const observer = new IntersectionObserver(entries => {
+          entries.forEach(e => {
+            if (e.isIntersecting) {
+              e.target.classList.add('visible');
+              observer.unobserve(e.target);
+            }
+          });
+        }, { threshold: 0.15 });
         document.querySelectorAll('.reveal').forEach(el => observer.observe(el));
 
-        // Prefill service
+        // Service click prefill
         document.querySelectorAll('.service-card').forEach(card => {
           card.addEventListener('click', () => {
             const service = card.getAttribute('data-service');
@@ -188,20 +200,19 @@
           });
         });
 
-        // Handle form submission (Thank You popup)
+        // Form submit with popup (no captcha)
         const form = document.getElementById('byltForm');
         const popup = document.getElementById('thankYouPopup');
         const closeBtn = document.getElementById('closePopup');
 
         form.addEventListener('submit', (e) => {
           e.preventDefault();
-          fetch(form.action, {
-            method: 'POST',
-            body: new FormData(form),
-          }).then(() => {
-            popup.style.display = 'flex';
-            form.reset();
-          }).catch(() => alert('Something went wrong, please try again.'));
+          fetch(form.action, { method: 'POST', body: new FormData(form) })
+            .then(() => {
+              popup.style.display = 'flex';
+              form.reset();
+            })
+            .catch(() => alert('Something went wrong. Please try again.'));
         });
 
         closeBtn.addEventListener('click', () => {
